2015-02-27  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Catch malloc failure.

	* datrie/tail.c (tail_fread):
	  - Check malloc() result on suffix string and exit properly.

2015-02-26  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	More micro-optimization with LIKELY/UNLIKELY.

	* datrie/alpha-map.c (alpha_map_char_to_trie, alpha_map_trie_to_char):
	  - Use UNLIKELY() when checking for NUL character.

2015-02-10  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix 'make distcheck' failure.

	* doc/Makefile.am:
	  - Remove doxygen db file on clean.

2015-02-10  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	More update of my e-mail address.

	* man/trietool.1:
	  - Update my e-mail address.

2015-02-10  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Rename trietool-0.2 utility to trietool.

	* configure.ac:
	  - Check for ln -s
	* tools/Makefile.am:
	  - Rename bin target from trietool-0.2 to trietool.
	  - Add hooks to install/uninstall symlink with old name.
	* man/Makefile.am, man/trietool-0.2.1 -> man/trietool.1:
	  - Rename & update manpage accordingly.

2015-02-06  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Micro-optimize with likely/unlikely hints.

	* datrie/trie-private.h:
	  - Add LIKELY() and UNLIKELY() macros based on compiler extension.
	* datrie/alpha-map.c
	  (alpha_map_new, alpha_map_clone, alpha_map_fread_bin,
	   alpha_map_add_range, alpha_map_char_to_trie_str,
	   alpha_map_trie_to_char_str):
	* datrie/darray.c
	  (symbols_new, da_new, da_fread, da_get_base, da_get_check,
	   da_set_base, da_set_check, da_insert_branch, da_find_free_base,
	   da_extend_pool):
	* datrie/dstring.c (dstring_new, dstring_ensure_space):
	* datrie/tail.c
	  (tail_new, tail_fread, tail_get_suffix, tail_set_suffix,
	   tail_get_data, tail_set_data, tail_walk_str, tail_walk_char):
	* datrie/trie.c
	  (trie_new, trie_fread, trie_enumerate, trie_state_new,
	   trie_state_walk, trie_state_is_walkable, trie_iterator_new):